# diff_robot_dan_ros

./: README.md  my_map.yaml
diff_robot_dan/: CMakeLists.txt  README.md  package.xml
diff_robot_dan_base/: CMakeLists.txt  README.md  package.xml
diff_robot_dan_base/ros_arduino_bridge/ROSArduinoBridge/: ROSArduinoBridge.ino  commands.h  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino  sensors.h  servos.h  servos.ino
diff_robot_dan_bringup/: CMakeLists.txt  README.md  package.xml
diff_robot_dan_bringup/config/: async_mapper_config.yaml  joystick_config.yaml  microsoft®_lifecam_hd-3000:_mi.yaml  twist_mux.yaml
diff_robot_dan_bringup/launch/: bringup_robot.launch.py  joystick_teleop.launch.py  ld06_lidar.launch.py
diff_robot_dan_controller/: CMakeLists.txt  README.md  package.xml
diff_robot_dan_description/: CMakeLists.txt  README.md  package.xml
diff_robot_dan_description/config/: gazebo_ros2_control.yaml  robot_controllers.yaml
diff_robot_dan_description/description/: diff_robot_dan.urdf.xacro
diff_robot_dan_description/launch/: display.launch  display_basic.launch.py  display_model.launch.py  display_no_joint_gui.launch.py  display_no_joint_gui.py  display_xacro_model.launch  gazebo.launch  robot_description.launch.py
diff_robot_dan_description/launch/launch/: display.launch
diff_robot_dan_description/meshes/: arduino.STL  arduino_blue.stl  base_lidar_gray.stl  base_plate_gray.stl  base_platform.STL  battery_1.STL  battery_1850_blue.stl  battery_2.STL  battery_holder.STL  battery_holder_black.stl  camera.STL  center_wheel_support.STL  central_shaft.STL  central_wheel.STL  chip_l298n_red.stl  coupling_left.STL  coupling_motor_gold.stl  coupling_right.STL  dc_motor_6v_silver.stl  driver.STL  hex_support_40_gold.stl  hex_support_m1.STL  hex_support_m2.STL  hex_support_m3.STL  hex_support_m4.STL  hex_support_m5.STL  hex_support_m6.STL  hex_support_s1.STL  hex_support_s2.STL  hex_support_s3.STL  hex_support_s4.STL  hex_support_short_white.stl  ld_lidar_06_black.stl  lidar.STL  lidar_base.STL  motor_left.STL  motor_right.STL  motor_support_left.STL  motor_support_right.STL  neumatic_left.STL  (+25 more)
diff_robot_dan_description/resources/: frames_2023-11-21_21.51.18.gv
diff_robot_dan_description/rviz/: rviz_robot_model.rviz  rviz_up.rviz  urdf.rviz
diff_robot_dan_description/urdf/: diff_robot_dan.urdf  diff_robot_dan.urdf.xacro  diff_robot_dan.xacro  diff_robot_dan_controllers.xacro  diff_robot_dan_core.urdf  diff_robot_dan_core.urdf.xacro  diff_robot_dan_gazebo.xacro  diff_robot_dan_plain.urdf  diff_robot_dan_ros2_control.xacro  diff_robot_dan_sensors.xacro  materials_and_colors.xacro
diff_robot_dan_gazebo/: CMakeLists.txt  README.md  package.xml
diff_robot_dan_gazebo/config/: gazebo_params.yaml
diff_robot_dan_gazebo/launch/: base_simulation.launch.py  robot_sim_world.launch.py  ros2_control_sim.launch.py  simple_controller_sim.launch.py  try_controller_sim.launch.py
diff_robot_dan_gazebo/rviz/: odom_sim_config.rviz
diff_robot_dan_gazebo/worlds/: gazebo_laberynth.world
diff_robot_dan_gazebo/worlds/gazebo_laberynth/: model.config  model.sdf
diff_robot_dan_navigation/: CMakeLists.txt  README.md  package.xml
diff_robot_dan_navigation/config/: nav2_config.yaml
diff_robot_dan_navigation/launch/: use_localization.launch.py  use_nav2.launch.py
diff_robot_dan_navigation/rviz/: nav2_costmap_and_path.rviz  nv2_costmap.rviz
diff_robot_dan_slam/: CMakeLists.txt  README.md  package.xml
diff_robot_dan_slam/config/: online_async_localization_config.yaml  online_async_mapper_config.yaml
diff_robot_dan_slam/launch/: online_async_localization.launch.py  online_async_mapper.launch.py
diff_robot_dan_slam/maps/: gazebo_laberynth_map.pgm  gazebo_laberynth_map.yaml  gazebo_laberynth_serial.data  robotics_lab.pgm
diff_robot_dan_slam/rviz/: map_visualizer.rviz  slam_visualizer.rviz
diff_robot_dan_teleop/: CMakeLists.txt  README.md  package.xml
diff_robot_dan_teleop/config/: twist_mux_config.yaml
diff_robot_dan_teleop/launch/: joystick_teleop.launch.py  keyboard_teleop.launch.py  twist_mux.launch.py
diffdrive_arduino/: CMakeLists.txt  README.md  package.xml
diffdrive_arduino/controllers/: robot_controller_example.yaml
diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.h  config.h  diffdrive_arduino.h  wheel.h
diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp  diffdrive_robot.cpp  wheel.cpp
